SFDCProject/src/objects/Asset_Information__c.object
<CustomObject>
    <description>Store the asset information</description>
    <fields>
        <fullName>Count__c</fullName>
        <description>Store the number of components</description>
        <label>Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <description>Store the Manufacturer of the component</description>
        <label>Manufacturer</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Store the Model of the component</description>
        <label>Model</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposalName__c</fullName>
        <label>Proposal Name</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Asset Informations</relationshipLabel>
        <relationshipName>Asset_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <description>Populated on Asset when a Proposal is created. Added as part of BSKY-6079 07/10/2015</description>
        <label>SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Populated on Asset when a Proposal is created. Added as part of BSKY-6079 07/10/2015</description>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <description>Populated on Asset when a Proposal is created. Added as part of BSKY-6079 07/10/2015</description>
        <label>Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of the component</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microinverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Asset Information</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Asset Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>